--- a/LaTeX_OCR_training.ipynb
+++ b/LaTeX_OCR_training.ipynb
@@ -60,7 +60,7 @@
       },
       "source": [
         "!pip install gpustat -q\n",
-        "!pip install opencv-python-headless==4.1.2.30 -U -q\n",
+        "!pip install "opencv-python-headless<5" -q",
         "!pip install --upgrade --no-cache-dir gdown -q"
       ],
       "execution_count": null,
